// Copyright (C) 2018 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// [START declaration]
syntax = "proto3";
package com_android_cts_apicoverage;
// [END declaration]

// [START java_declaration]
option java_package = "com.android.cts.apicoverage";
option java_outer_classname = "TestSuiteProto";
// [END java_declaration]

// [START messages]
// An entry in a Test Suire Release messages: cts, etc.
message Entry {
    // Entry ID
    string id = 1;
    // Name
    string name = 2;

    enum EntryType {
        FOLDER = 0;
        FILE = 1;
        CONFIG = 2;
        JAR = 3;
        APK = 4;
        EXE = 5;
        SO = 6;
    }

    // Type
    EntryType type = 3;
    // Size
    int64 size = 4;
    // Content ID
    string content_id = 5;
    // Parent entry ID
    string parent_id = 6;
    // Relative path
    string relative_path = 7;
}

// A Test Suite Release: cts, etc.
message TestSuiteContent {
    // Entry ID
    string id = 1;
    // Name
    string name = 2;
    // Version
    string version = 3;
    // Build ID
    string bid = 4;
    // Content ID
    string content_id = 5;
    // File Entries
    repeated Entry file_entries = 6;
}
// [END messages]
